# raglite

./: README.md  pyproject.toml
src/raglite/: _chainlit.py  _config.py  _embed.py  _eval.py  _extract.py  _html.py  _insert.py  _litellm.py  _mcp.py  _rag.py  _split_sentences.py
tests/: conftest.py  test_embed.py  test_html.py  test_split_sentences.py
