[project]
name = "raglite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "litellm==1.55.2",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.4",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "tqdm>=4.67.1",
    "typer>=0.12.5",
    "platformdirs>=4.3.6",
    "rerankers>=0.6.1",
    "flashrank>=0.2.9",
    "pandas>=2.2.3",
    "langdetect>=1.0.9",
    "docling>=2.14.0",
    "somajo>=2.4.3",
    "markdownify>=0.14.1",
    "pynndescent>=0.5.13",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "numpy>=2.0.2",
]

[project.scripts]
raglite = "raglite:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]
